# Schemind

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini
Recording_and_Reasoning/: ARA_parameter.json  ARA_prompts.py  recording_agent.py  user_action_recorder.py
api/: index.py  initialize_vector_db.py  llm_services.py  main.py  node.py  prompts.py
app/: page.tsx
app/dashboard/: page.tsx
data/pdf_data/: NCUOP1共用-主管-製作1061026.json  (+6 more)
filesystem_manager/: file_analyzer.py  file_database.py  file_observer.py
julia/: mark_page.js  webv.ipynb  webv_RAG.ipynb
src/: ..\data\logs\browser_use_conversation_10.txt  ..\data\logs\browser_use_conversation_11.txt  ..\data\logs\browser_use_conversation_12.txt  ..\data\logs\browser_use_conversation_13.txt  ..\data\logs\browser_use_conversation_14.txt  ..\data\logs\browser_use_conversation_15.txt  ..\data\logs\browser_use_conversation_2.txt  ..\data\logs\browser_use_conversation_3.txt  ..\data\logs\browser_use_conversation_4.txt  ..\data\logs\browser_use_conversation_5.txt  ..\data\logs\browser_use_conversation_6.txt  ..\data\logs\browser_use_conversation_7.txt  ..\data\logs\browser_use_conversation_8.txt  ..\data\logs\browser_use_conversation_9.txt  initialize_script.py  initialize_vector_db.py  llm_services.py  main.py  my_api.py  node.py  prompts.py  rag_bot_experiment_script.py  recorder_experiment_script.py  schemas.py  user_action_recorder_service.py  utils.py
templates/: index.html
tests/: test_filesystem_manager.py
(+57 files in other folders)
